[tool.black]
line_length = 100
skip-string-normalization = true

[tool.poetry]
name = "grind-75"
version = "0.1.0"
description = ""
authors = ["kyo <odinxp@gmail.com>"]
readme = "README.md"
packages = [{include = "grind_75"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
